# semestre2

./: CMakeLists.txt  Guionaso.cpp  Guionaso.h  Hokage.cpp  Hokage.h  Jinchuriki.cpp  Jinchuriki.h  Ninja.cpp  Ninja.h  Persona.cpp  Persona.h  Power_ops.cpp  Power_ops.h  Prota.cpp  Prota.h  Sannin.cpp  Sannin.h  main.cpp
exportToHTML/: Persona.cpp.html
untitled/: CMakeLists.txt  afore.h  examen.cpp  main.cpp.html
untitled/examen_3/: CMakeCache.txt  build.ninja  cmake_install.cmake
untitled/examen_3/.cmake/api/v1/reply/: cache-v2-ba78412f3f5a8d6e3efe.json  cmakeFiles-v1-9bdc82014163bfa4d186.json  codemodel-v2-9295ca2b420635fd623f.json  index-2023-11-30T15-28-24-0054.json  target-untitled-Debug-dd2502752b8b16ebd0ec.json
untitled1/: Booleanos.cpp  Booleanos.h  CMakeLists.txt  CharCell.cpp  CharCell.h  Coche.cpp  Coche.h  Enteros.cpp  Enteros.h  FloatCell.cpp  FloatCell.h  dobles.cpp  dobles.h  main.cpp
untitled1/exportToHTML/: CMakeLists.txt.html  Coche.cpp.html  Coche.h.html  index.html  main.cpp.html
