cmake_minimum_required(VERSION 3.26)
project(CLionProjects)

set(CMAKE_CXX_STANDARD 17)

add_executable(CLionProjects main.cpp
        Persona.cpp
        Persona.h
        Ninja.h
        Ninja.cpp
        Sannin.h
        Sannin.cpp
        Hokage.h
        Hokage.cpp
        Jinchuriki.h
        Jinchuriki.cpp
        Guionaso.h
        Guionaso.cpp
        Power_ops.cpp
        Power_ops.h
        Prota.h
        Prota.cpp)
