cmake_minimum_required(VERSION 3.26)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 main.cpp
        Coche.cpp
        Coche.h
        FloatCell.cpp
        FloatCell.h
        CharCell.h
        CharCell.cpp
        Enteros.cpp
        Enteros.h
        dobles.cpp
        dobles.h
        Booleanos.cpp
        Booleanos.h)
